.k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-catalog
spec:
  replicas: 1
  strategy: {}
  template:
    spec:
      containers:
      - image: utsabroy/movie-info-service:8e9ff6d
        name: movie-info-service
        ports:
        - containerPort: 8080
        resources: {}
status: {}
