.k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-catalog
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
status:
  loadBalancer: {}
