.k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-catalog-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: movie-catalog-service
              port:
                number: 80
          path: /
          pathType: Prefix
